--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <h1>Estudiante: Jhon Mamani</h1>
+    <h1>Estudiante: Jhon </h1>
     <img src="imagenes/jhon.png" alt="My Profile Picture">
   </header> 
   <main>
