--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <h1>Estudiante: Jhon </h1>
-    <img src="imagenes/jhon.png" alt="My Profile Picture">
+    <img src="imagenes/profile.png" alt="My Profile Picture">
   </header> 
   <main>
     <h2>Diseño Web - Assignment Portal</h2>
