--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <main>
     <h2>Diseño Web - Assignment Portal</h2>
     <ul>
-      <li> Practica 1:<a href="#">Servidor Web </a></li>
-      <li>Practica 2:<a href="#">HTML</a></li>
+      <li>practica1:<a href="#">Servidor Web </a></li>
+      <li>practica2:<a href="#">HTML</a></li>
       
     </ul>
     
