--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <main>
     <h2>Diseño Web - Assignment Portal</h2>
     <ul>
-      <li>practica1:<a href="#">Servidor Web </a></li>
+      <li>practica1:<a href="practicas/practica1/Descripcion Actividad Validación de marcado HTML.pdf">Servidor Web </a></li>
       <li>practica2:<a href="#">HTML</a></li>
       
     </ul>
