--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h2>Diseño Web - Assignment Portal</h2>
     <ul>
       <li>practica1:<a href="practicas/practica1/Descripcion Actividad Validación de marcado HTML.pdf">Servidor Web </a></li>
-      <li>practica2:<a href="#">HTML</a></li>
+      <li>practica2:<a href="practicas/practica2/fixedhtml.html">HTML</a></li>
       
     </ul>
     
