--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <main>
     <h2>Diseño Web - Assignment Portal</h2>
     <ul>
-      <li>practica 1:<a href="practicas/practica1/Descripcion Actividad Validación de marcado HTML.pdf">Servidor Web </a></li>
-      <li>practica 2:<a href="practicas/practica2/fixedhtml.html">HTML</a></li>
+      <li>Practica 1:<a href="practicas/practica1/Practica_1.pdf">Servidor Web </a></li>
+      <li>Practica 2:<a href="practicas/practica2/fixedhtml.html">HTML</a></li>
       
     </ul>
     
