--- a/proyecto/avance.html
+++ b/proyecto/avance.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="contenedor">
-        <img src="principal.png" alt="descripcion de imagen" width="200">
+        <img src="photoo/principal.png" alt="descripcion de imagen" width="200">
         <header>
             <nav>
                 <ul>
