--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <ul>
       <li>Practica 1:<a href="practicas/practica1/Practica_1.pdf">Servidor Web </a></li>
       <li>Practica 2:<a href="practicas/practica2/fixedhtml.html">HTML</a></li>
-      <li>proyecto 1:<a href="proyecto 1/Avance.pdf">HTML</a></li>
-      <li>proyecto 2:<a href="proyecto 2/avance.html">HTML</a></li>
+      <li>proyecto 1:<a href="proyecto 1/Avance.pdf">Primer avance</a></li>
+      <li>proyecto 2:<a href="proyecto 2/avance.html">Segundo avance</a></li>
 
       
     </ul>
