--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       <li>Practica 2:<a href="practicas/practica2/fixedhtml.html">HTML</a></li>
       <li>proyecto 1:<a href="proyecto 1/Avance.pdf">Primer avance</a></li>
       <li>proyecto 2:<a href="proyecto 2/avance.html">Segundo avance</a></li>
+      <li>proyecto_final:<a href="proyecto_final/ITX Information Tegnology eXperts.html">Proyectofinal</a></li>
+
 
       
     </ul>
